# BitArray

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: bitarray_popcnt.cpp  bitarray_xorshift.cpp  bitset_popcnt.cpp  bitset_xorshift.cpp
include/: BitArray.hpp  iterators.hpp  transforms.cpp  transforms.hpp  utils.hpp
include/BitArray/: iterators.hpp  manipulation.hpp  transforms.hpp
include/LA/: decompose.hpp  matrix.hpp  traits.hpp  vector.hpp
include/detail/: utils.hpp
test/: bitmanip_test.cpp  bitop_test.cpp  convert_test.cpp  iterator_test.cpp  latraits_test.cpp  matrix_test.cpp  matrixdecomp_test.cpp  matrixop_test.cpp  popcount_test.cpp  trails_test.cpp  vector_test.cpp
